--- a/.github/workflows/flutter_mobile_build.yml
+++ b/.github/workflows/flutter_mobile_build.yml
@@ -78,10 +78,10 @@ jobs:
 
       # -------- Android 构建 (APK/AAB) --------
       - name: 构建 Android APK（release）
-        run: flutter build apk --release
+        run: flutter build apk --releasee --dart-define=API_BASE_URL=http://101.237.129.72:8000 --dart-define=WS_CHRONICLES_URL=ws://101.237.129.72:8000/ws/chronicles
 
       - name: 构建 Android AppBundle（release）
-        run: flutter build appbundle --release
+        run: flutter build appbundle --release --dart-define=API_BASE_URL=http://101.237.129.72:8000 --dart-define=WS_CHRONICLES_URL=ws://101.237.129.72:8000/ws/chronicles
 
       - name: 上传 Android 构建产物
         uses: actions/upload-artifact@v4
@@ -99,7 +99,7 @@ jobs:
         continue-on-error: true  # 若 Flutter 自动处理 Pods，此步可容忍失败
 
       - name: 构建 iOS IPA（release，无签名）
-        run: flutter build ipa --release --no-codesign
+        run: flutter build ipa --release --no-codesign --dart-define=API_BASE_URL=http://101.237.129.72:8000 --dart-define=WS_CHRONICLES_URL=ws://101.237.129.72:8000/ws/chronicles
 
       - name: 上传 iOS 构建产物
         uses: actions/upload-artifact@v4
